--- a/scss/common/fkb-c-header.scss
+++ b/scss/common/fkb-c-header.scss
@@ -53,7 +53,7 @@
     &.active {
       > button,
       > a {
-        background: var(--tertiary-low);
+        background: var(--tertiary-low) !important;
         .d-icon {
           color: var(--tertiary);
         }
