--- a/scss/common/fkb-c-bulk-select-no-glimmer.scss
+++ b/scss/common/fkb-c-bulk-select-no-glimmer.scss
@@ -3,172 +3,174 @@
   .user-messages-page,
   body[class*="tag-"]:not(.archetype-regular):not(.archetype-banner),
   body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
-    &.bulk-select-enabled {
-      .mobile-view & {
-        .list-controls {
-          .navigation-container {
-            .navigation-controls {
-              > *:not(.dismiss-container-top) {
+    &.glimmer-topic-list-failed {
+      &.bulk-select-enabled {
+        .mobile-view & {
+          .list-controls {
+            .navigation-container {
+              .navigation-controls {
+                > *:not(.dismiss-container-top) {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
+      // Safari requires as it handle tpl as table-row and position absolute / relative not works
+      .topic-list {
+        .topic-list-item {
+          display: block;
+        }
+      }
+      .topic-list {
+        &.sticky-header .topic-list-header,
+        .topic-list-header {
+          display: block;    
+          position: fixed;
+          bottom: env(safe-area-inset-bottom);;
+          top: auto;
+          box-shadow: var(--shadow-card);      
+          background: var(--secondary);
+          border-top-left-radius: var(--d-default-border-radius);
+          border-top-right-radius: var(--d-default-border-radius);
+          z-index: z("dropdown");
+          .mobile-view & {
+            left: 0.75em;
+            bottom: 6em;
+            border-radius: var(--d-button-border-radius);
+            html.footer-nav-visible:not(.footer-nav-ipad) & {
+              bottom: calc(var(--footer-nav-height) + 6em);
+              transition: bottom linear 0.1s;
+            }
+          }
+          // If footer nav active
+          html.footer-nav-visible:not(.footer-nav-ipad) & {
+            bottom: calc(var(--footer-nav-height) + 1.5em);
+            transition: bottom linear 0.1s;
+          }
+          span:not(.bulk-select-topics) {
+            display: none;
+          }
+          tr {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            border-bottom: none;
+            th.default.topic-list-data,
+            th.bulk-select.topic-list-data {
+              padding: 0;
+              button.bulk-select {
+                padding: 1rem 1.25rem;
+                .mobile-view & {
+                  padding: 1rem;
+                  .d-icon {
+                    color: var(--primary-high-or-secondary-low);
+                  }
+                }
+                margin-right: 0;
+                line-height: var(--line-height-small);
+              }
+            }
+            th.bulk-select.topic-list-data {
+              width: auto !important;
+              > button.bulk-select {
                 display: none;
               }
             }
+            th.default.topic-list-data {
+              .bulk-select-topics {
+                padding-left: 0;
+                align-items: center;
+              }
+            }
           }
         }
-      }
-    }
-    // Safari requires as it handle tpl as table-row and position absolute / relative not works
-    .topic-list {
-      .topic-list-item {
-        display: block;
-      }
-    }
-    .topic-list {
-      &.sticky-header .topic-list-header,
-      .topic-list-header {
-        display: block;    
-        position: fixed;
-        bottom: env(safe-area-inset-bottom);;
-        top: auto;
-        box-shadow: var(--shadow-card);      
-        background: var(--secondary);
-        border-top-left-radius: var(--d-default-border-radius);
-        border-top-right-radius: var(--d-default-border-radius);
-        z-index: z("dropdown");
-        .mobile-view & {
-          left: 0.75em;
-          bottom: 6em;
-          border-radius: var(--d-button-border-radius);
-          html.footer-nav-visible:not(.footer-nav-ipad) & {
-            bottom: calc(var(--footer-nav-height) + 6em);
-            transition: bottom linear 0.1s;
+        &:not(.sticky-header) .topic-list-header {
+          .mobile-view & {
+            tr {
+              button.bulk-select {
+                border-radius: var(--d-button-border-radius);
+                box-shadow: 0 0 0 1px var(--primary-high), var(--shadow-card);
+              }
+            }
           }
         }
-        // If footer nav active
-        html.footer-nav-visible:not(.footer-nav-ipad) & {
-          bottom: calc(var(--footer-nav-height) + 1.5em);
-          transition: bottom linear 0.1s;
-        }
-        span:not(.bulk-select-topics) {
-          display: none;
-        }
-        tr {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          border-bottom: none;
-          th.default.topic-list-data,
-          th.bulk-select.topic-list-data {
-            padding: 0;
-            button.bulk-select {
-              padding: 1rem 1.25rem;
-              .mobile-view & {
-                padding: 1rem;
-                .d-icon {
-                  color: var(--primary-high-or-secondary-low);
+        &.sticky-header .topic-list-header {
+          .mobile-view & {
+            max-width: calc(100% - 36px);
+            overflow: hidden;
+            tr {
+              max-width: 100%;
+              overflow: auto;
+              button.bulk-select {
+                box-shadow: none;
+              }
+              .bulk-select-topics {
+                .btn {
+                  white-space: nowrap;
+                  &:last-child {
+                    margin-right: 0.5em;
+                  }
                 }
-              }
-              margin-right: 0;
-              line-height: var(--line-height-small);
-            }
-          }
-          th.bulk-select.topic-list-data {
-            width: auto !important;
-            > button.bulk-select {
-              display: none;
-            }
-          }
-          th.default.topic-list-data {
-            .bulk-select-topics {
-              padding-left: 0;
-              align-items: center;
-            }
-          }
-        }
-      }
-      &:not(.sticky-header) .topic-list-header {
-        .mobile-view & {
-          tr {
-            button.bulk-select {
-              border-radius: var(--d-button-border-radius);
-              box-shadow: 0 0 0 1px var(--primary-high), var(--shadow-card);
-            }
-          }
-        }
-      }
-      &.sticky-header .topic-list-header {
-        .mobile-view & {
-          max-width: calc(100% - 36px);
-          overflow: hidden;
-          tr {
-            max-width: 100%;
-            overflow: auto;
-            button.bulk-select {
-              box-shadow: none;
-            }
-            .bulk-select-topics {
-              .btn {
-                white-space: nowrap;
-                &:last-child {
-                  margin-right: 0.5em;
-                }
-              }
-            }
-          }
-        }
-      }
-      .topic-list-data {
-        max-width: 100%;
-      }
-      .topic-list-item {
-        position: relative;
-        &:first-child {
-          .topic-list-data {
-            &.bulk-select {
-              top: 0;
-              .mobile-view & {
-                padding-top: 0;
-                margin-top: -1px;
-              }
-              label {
-                height: calc(100% - 28px);
               }
             }
           }
         }
         .topic-list-data {
-          &.bulk-select {
-            position: absolute;
-            top: 8px;
-            .mobile-view & {
-              top: 0;
-            }
-            left: 0;          
-            width: 100%;
-            height: 100%;
-            max-width: 100%;
-            z-index: 3;
-            label {
-              display: flex;
-              flex-direction: row-reverse;
-              padding: 10px;
-              height: calc(100% - 36px);
-              background: rgba(var(--tertiary-rgb), 0.03);
-              border-radius: var(--d-default-border-radius);
-              .mobile-view & {
-                margin-top: 1px;
+          max-width: 100%;
+        }
+        .topic-list-item {
+          position: relative;
+          &:first-child {
+            .topic-list-data {
+              &.bulk-select {
+                top: 0;
+                .mobile-view & {
+                  padding-top: 0;
+                  margin-top: -1px;
+                }
+                label {
+                  height: calc(100% - 28px);
+                }
               }
-              .discourse-no-touch &, 
-              .discourse-touch.desktop-view & {
-                &:hover,
-                &:active {
-                  background: rgba(var(--tertiary-rgb), 0.1);
+            }
+          }
+          .topic-list-data {
+            &.bulk-select {
+              position: absolute;
+              top: 8px;
+              .mobile-view & {
+                top: 0;
+              }
+              left: 0;          
+              width: 100%;
+              height: 100%;
+              max-width: 100%;
+              z-index: 3;
+              label {
+                display: flex;
+                flex-direction: row-reverse;
+                padding: 10px;
+                height: calc(100% - 36px);
+                background: rgba(var(--tertiary-rgb), 0.03);
+                border-radius: var(--d-default-border-radius);
+                .mobile-view & {
+                  margin-top: 1px;
+                }
+                .discourse-no-touch &, 
+                .discourse-touch.desktop-view & {
+                  &:hover,
+                  &:active {
+                    background: rgba(var(--tertiary-rgb), 0.1);
+                  }
+                  &.selected {
+                    background: rgba(var(--tertiary-rgb), 0.3);
+                  }
                 }
                 &.selected {
                   background: rgba(var(--tertiary-rgb), 0.3);
                 }
-              }
-              &.selected {
-                background: rgba(var(--tertiary-rgb), 0.3);
               }
             }
           }
