--- a/common/common.scss
+++ b/common/common.scss
@@ -19,6 +19,7 @@ body.glimmer-topic-list-failed {
   @import "common/fkb-c-topic-list-no-glimmer";
 }
 @import "common/fkb-c-bulk-select";
+@import "common/fkb-c-bulk-select-no-glimmer";
 @import "common/fkb-c-topic";
 @import "common/fkb-c-private-message";
 @import "common/fkb-c-composer";
