Remove @include sticky

--- a/scss/desktop/fkb-d-fkb-panel.scss
+++ b/scss/desktop/fkb-d-fkb-panel.scss
@@ -13,7 +13,7 @@
   }
   .fkb-panel {
     display: none;
-    @include sticky;
+    position: sticky;
     top: calc(var(--header-offset) + 2em);
     @include bg-br;
     margin-bottom: 0.5em;
@@ -233,7 +233,7 @@
       width: 100%;
       
       @if $right-sidebar-blocks-expanded == "false" {
-        @include sticky;
+        position: sticky;
         top: calc(var(--header-offset) + 2em);
         @include bg-br;
         padding: 1em;
@@ -247,7 +247,7 @@
           padding: 1em;
           
           &:last-of-type {
-            @include sticky;
+            position: sticky;
             top: calc(var(--header-offset) + 2em);
             overflow-y: auto;
             max-height: calc(100vh - 10em);
