--- a/scss/var-mixin.scss
+++ b/scss/var-mixin.scss
@@ -24,14 +24,8 @@
 }
 
 @mixin fkb-word-wrap {
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  -ms-word-break: break-all;
-  word-break: break-all;
+  overflow-wrap: anywhere;
   word-break: break-word;
-  -ms-hyphens: auto;
-  -moz-hyphens: auto;
-  -webkit-hyphens: auto;
   hyphens: auto;
 }
 
@@ -93,7 +87,6 @@
 
 @mixin sticky-new-topic {
   position: sticky;
-  position: -webkit-sticky;
   top: calc(var(--header-offset) + 0.5em);
   animation: newPostUpSticky 0.2s ease-out;
   width: max-content;
@@ -157,27 +150,27 @@
   scrollbar-color: transparent var(--scrollbarBg);
   transition: scrollbar-color 0.25s ease-in-out;
   transition-delay: 0.5s;
-    
-  &::-webkit-scrollbar {
-    width: var(--scrollbarWidth);
-  }
-    
-  &::-webkit-scrollbar-thumb {
-    background-color: transparent;
-    border-radius: calc(var(--scrollbarWidth) / 2);
-  }
-    
-  &::-webkit-scrollbar-track {
-    background-color: transparent;
-  }
-    
+  
   &:hover {
     scrollbar-color: var(--scrollbarThumbBg) var(--scrollbarBg);
     
-    &::-webkit-scrollbar-thumb {
+    &::scrollbar-thumb {
       background-color: var(--scrollbarThumbBg);
     }
     
     transition-delay: 0s;
+  }
+    
+  &::scrollbar {
+    width: var(--scrollbarWidth);
+  }
+    
+  &::scrollbar-thumb {
+    background-color: transparent;
+    border-radius: calc(var(--scrollbarWidth) / 2);
+  }
+    
+  &::scrollbar-track {
+    background-color: transparent;
   }
 }
