--- a/scss/common/fkb-c-category.scss
+++ b/scss/common/fkb-c-category.scss
@@ -26,10 +26,10 @@ body[class*="category-"] {
 .categories-and-top {
   div.column {
     min-width: 100%;
+    margin: 0 auto;
     &.categories {
       margin-right: 0;
     }
-    margin: 0 auto;
     .latest-topic-list,
     .top-topic-list {
       @include bg-br;
@@ -83,13 +83,13 @@ body[class*="category-"] {
   margin-bottom: 0;
   .category-box {
     width: 100%;
-    .mobile-view & {
-      width: calc(100vw - 20px);
-    }
     margin: 0 0 16px 0;
     background: var(--secondary);
     border-radius: var(--d-default-border-radius);
-    border: 2px solid var(--category-color);;
+    border: 2px solid var(--category-color);
+    .mobile-view & {
+      width: calc(100vw - 20px);
+    }
     .category-box-inner {
       border: none;
     }
