--- a/scss/common/fkb-c-topic-list.scss
+++ b/scss/common/fkb-c-topic-list.scss
@@ -33,6 +33,12 @@
       &:first-child {
         padding-top: 0;
       }
+      &.highlighted {
+        animation: none;
+        @media (prefers-reduced-motion: no-preference) {
+          animation: background-fade-topiclight 2.5s ease-out;
+        }
+      }
     }
     .topic-list-item-separator {
       display: block;
