--- a/scss/common/fkb-c-sidebar.scss
+++ b/scss/common/fkb-c-sidebar.scss
@@ -1,7 +1,8 @@
 // Sidebar More is now a button 
 // Make it similar to the others link
 
-.btn-flat.sidebar-more-section-links-details-summary,
-.sidebar-more-section-links-details-summary.json-editor-btn-collapse {
-  border-radius: 0;
+.sidebar-section-link-wrapper {
+  &.--link-button {
+    border-radius: 0;
+  }
 }
