FIX: css validity

--- a/scss/common/fkb-c-sidebar.scss
+++ b/scss/common/fkb-c-sidebar.scss
@@ -2,7 +2,7 @@
 // Make it similar to the others link
 
 .sidebar-section-link-wrapper {
-  &.--link-button {
+  .--link-button {
     border-radius: 0;
   }
 }
