UX: Reset topic-list-item-background-color variable to transparent

--- a/scss/var-mixin.scss
+++ b/scss/var-mixin.scss
@@ -6,6 +6,7 @@
   --d-input-border-radius: #{$border_radius_input};
   --d-select-body-border-radius: #{$border_radius_select_body};
   --d-avatar-border-radius: #{$border_radius_avatar};
+  --topic-list-item-background-color: transparent;
 }
 
 /* Mixins */
