--- a/javascripts/discourse/connectors/discovery-below/fkb-panel-sidebar.hbs
+++ b/javascripts/discourse/connectors/discovery-below/fkb-panel-sidebar.hbs
@@ -1,3 +1,4 @@
+{{#unless this.site.mobileView}}
   <div class="fkb-panel">
     {{#if this.user}}
       <div class="fkb-panel-top" style={{html-safe this.userCardBg}}>
@@ -90,3 +91,4 @@
       {{right-sidebar-blocks}}
     </div>
   {{/if}}
+{{/unless}}
