--- a/scss/desktop/fkb-d-topic-list.scss
+++ b/scss/desktop/fkb-d-topic-list.scss
@@ -112,8 +112,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
     grid-area: pins;
   }
   
-  .fkb-panel-sidebar,
-  .fkb-panel-sidebar .fkb-panel {
+  .fkb-panel {
     display: flex;
     flex-direction: column;
     @media screen and (max-width: 1099px) {
@@ -145,7 +144,7 @@ body[class*="category-"]:not(.archetype-regular):not(.archetype-banner) {
   }
 
   .list-container + span, // keep it for older Discourse versions
-  .fkb-panel-sidebar {
+  .fkb-panel {
     grid-area: fkb-panel;
   }
 
